--- a/index.html
+++ b/index.html
@@ -61,7 +61,11 @@
             <a
               href="#section-book"
               class="btn btn--white btn--animated bo"
-              style="bottom: 0 !important; position: relative !important"
+              style="
+                bottom: 0 !important;
+                position: relative !important;
+                margin-top: 4rem;
+              "
               >unisciti a noi</a
             >
           </li>
@@ -433,7 +437,7 @@
           <ul class="first-col__social-links">
             <li>
               <a
-                class="footer-link"
+                class="footer-logo"
                 href="https://www.instagram.com/a.s.d.ginnastica_ideo/?hl=it"
                 ><ion-icon
                   class="first-col__social-icon"
@@ -443,7 +447,7 @@
             </li>
             <li>
               <a
-                class="footer-link"
+                class="footer-logo"
                 href="https://www.facebook.com/asdginnasticaideo/"
                 ><ion-icon
                   class="first-col__social-icon"
@@ -452,7 +456,7 @@
               ></a>
             </li>
             <li>
-              <a class="footer-link" href="tel:415-201-6370">
+              <a class="footer-logo" href="tel:415-201-6370">
                 <ion-icon
                   class="first-col__social-icon"
                   name="call-outline"
@@ -460,7 +464,7 @@
               </a>
             </li>
             <li>
-              <a class="footer-link" href="mailto:hello@omnifood.com"
+              <a class="footer-logo" href="mailto:hello@omnifood.com"
                 ><ion-icon
                   class="first-col__social-icon"
                   name="mail-open-outline"
