--- a/index.html
+++ b/index.html
@@ -69,7 +69,7 @@
               >unisciti a noi</a
             >
           </li>
-          <li class="navigation__item">
+          <!-- <li class="navigation__item">
             <a
               class="footer-link"
               href="https://www.instagram.com/a.s.d.ginnastica_ideo/?hl=it"
@@ -87,7 +87,7 @@
                 name="logo-facebook"
               ></ion-icon
             ></a>
-          </li>
+          </li> -->
 
           <!--<li class="navigation__item">
             <a href="#section-book" class="navigation__link"
