--- a/index.html
+++ b/index.html
@@ -10,6 +10,8 @@
 
     <!-- Bootstrap CSS -->
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/bootstrap/5.3.0/css/bootstrap.min.css">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.10.5/font/bootstrap-icons.css" rel="stylesheet">
+
 
     <!-- Glide.js Core CSS -->
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/Glide.js/3.5.0/css/glide.core.min.css">
@@ -35,6 +37,32 @@
     
     
     <title>Ginnastica Ideò | Ginnastica Ritmica & Danza Classica</title>
+
+    <style>
+        .card-img {
+	position: relative;
+	overflow: hidden;
+}
+
+.card-overlay {
+	position: absolute;
+	top: 0;
+	left: 0;
+	width: 100%;
+	height: 100%;
+	background-color: rgba(0, 0, 0, 0.3); /* semi-transparent overlay */
+	display: flex;
+	justify-content: center;
+	align-items: center;
+	opacity: 1; /* Always visible */
+	cursor: pointer;
+}
+
+.search-icon {
+	font-size: 4rem;
+	color: white;
+}
+    </style>
 </head>
 <body>
     <div class="navigation">
